// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a null gene correctly 1`] = `
<div
  className="dDtKEb"
  value={null}
>
  <div
    className="iXxpJJ"
    value={null}
  >
    Kawaii
    <div
      className="gjNVml"
      value={null}
    />
  </div>
  <input
    className="kjtXRk"
    max="100"
    min="0"
    onChange={[Function]}
    placeholder="Multiple"
    step="10"
    type="number"
    value=""
  />
</div>
`;

exports[`renders a positive-valued gene correctly 1`] = `
<div
  className="eJIUEQ"
  value={70}
>
  <div
    className="eaagZv"
    value={70}
  >
    Kawaii
    <div
      className="kHxQBi"
      value={70}
    />
  </div>
  <input
    className="kjtXRk"
    max="100"
    min="0"
    onChange={[Function]}
    placeholder="Multiple"
    step="10"
    type="number"
    value={70}
  />
</div>
`;

exports[`renders a zero-valued gene correctly 1`] = `
<div
  className="inyXqK"
  value={0}
>
  <div
    className="cXizAY"
    value={0}
  >
    <del>
      Kawaii
    </del>
    <div
      className="kdkQr"
      value={0}
    />
  </div>
  <input
    className="kjtXRk"
    max="100"
    min="0"
    onChange={[Function]}
    placeholder="Multiple"
    step="10"
    type="number"
    value={0}
  />
</div>
`;
